--- a/app/build.gradle
+++ b/app/build.gradle
@@ -33,7 +33,7 @@ dependencies {
     implementation 'com.android.support.constraint:constraint-layout:1.1.3'
     implementation 'com.squareup.okhttp3:okhttp:3.13.1'  //http通信ライブラリ
     implementation 'com.eclipsesource.minimal-json:minimal-json:0.9.5' //jsonパースライブラリ
-    def coroutines_version = '1.1.1' //kotlinコルーチン用ライブラリ(async, await)
+    def coroutines_version = '1.3.0-M2' //kotlinコルーチン用ライブラリ(async, await)
     implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:$coroutines_version" //kotlinコルーチン用ライブラリ(async, await)
     implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:$coroutines_version" //kotlinコルーチン用ライブラリ(async, await)
     testImplementation 'junit:junit:4.12'
