--- a/app/build.gradle
+++ b/app/build.gradle
@@ -31,9 +31,9 @@ dependencies {
     implementation"org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
     implementation 'com.android.support:appcompat-v7:27.1.1'
     implementation 'com.android.support.constraint:constraint-layout:1.1.3'
-    implementation 'com.squareup.okhttp3:okhttp:3.13.1'  //http通信ライブラリ
+    implementation 'com.squareup.okhttp3:okhttp:4.1.0'  //http通信ライブラリ
     implementation 'com.eclipsesource.minimal-json:minimal-json:0.9.5' //jsonパースライブラリ
-    def coroutines_version = '1.3.0-M2' //kotlinコルーチン用ライブラリ(async, await)
+    def coroutines_version = '1.3.0' //kotlinコルーチン用ライブラリ(async, await)
     implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:$coroutines_version" //kotlinコルーチン用ライブラリ(async, await)
     implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:$coroutines_version" //kotlinコルーチン用ライブラリ(async, await)
     testImplementation 'junit:junit:4.12'
